--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/Adresse.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/Adresse.cshtml
@@ -284,7 +284,7 @@
                 <span asp-validation-for="Input.Rechnun_Straße" class="text-danger"></span>
             </div>
 
-            <h4>Lieferung Adresse</h4>
+          @*   <h4>Lieferung Adresse</h4>
 
             <div class="form-floating mb-3">
                 <select class="form-select" asp-for="Liefer_Land" name="Liefer_Land" id="countries floatingInput" placeholder="Land / country *">
@@ -555,7 +555,7 @@
                 <input asp-for="Input.Liefer_Straße" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Straße *" />
                 <label asp-for="Input.Liefer_Straße" class="form-label"></label>
                 <span asp-validation-for="Input.Liefer_Straße" class="text-danger"></span>
-            </div>
+            </div> *@
 
             <button type="submit" class="w-100 btn btn-lg danger">Aktualisieren</button>
         </form>
