--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Halbzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Halbzylinder.cshtml
@@ -164,7 +164,7 @@
                                     </textarea>
                                 </div>
 
-                                <h1>Value & Cost </h1>
+                                <h1>Wert</h1>
                                 <div id="Aussen_Innen_ProfilDopel">
                                     <div id="valueNGF" class="form-group">
 
