--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_System.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_System.cshtml
@@ -105,7 +105,7 @@
                                        </textarea>
                                 </div>
 
-                                <h1>Value & Cost </h1>
+                                <h1>Wert </h1>
                                 <div id="Aussen_Innen_ProfilDopel">
                                     <div id="valueNGF" class="form-group">
 
@@ -634,7 +634,7 @@
                                                                                                                  
                                                                                                             </textarea>
                                                                                                        
-                                                                                                        <h1>Value & Cost </h1>
+                                                                                                        <h1>Wert</h1>
                                                                                                         <div id="Aussen_Innen_ProfilDopel">
                                                                                                             <div id="valueNGF">
                                                                                                                 <input type="text" class="form-control" placeholder="Wert" name="value" />
