--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
@@ -6,8 +6,8 @@
     int f = -1;
     int r = -1;
     int galeryCheker = 0;
-    
-    
+    int countKleinZise = 1;
+
 }
 
 <style>
@@ -228,7 +228,6 @@
                         </div>
                         @if (ViewBag.KleinAussen != null)
                         {
-                            int countKleinZise = 1;
 
                             @for (int i = 0;i < ViewBag.KleinAussen.Count;i++)
                             {
@@ -274,12 +273,68 @@
                                         <input type="hidden" name="KleinZiseCount" value="@countItem" id="KleinZiseCount" />
                                     </div>
                                 </div>
+
                                 countKleinZise++;
+
                             }
                         }
-                                              
-                        <button type="button" onclick="newKlein()"  class="btn danger">Create New Size</button>
+                        @if (ViewBag.KleinInnen != null)
+                        {
+                            @for (int i = 0; i < ViewBag.KleinInnen.Count; i++)
+                            {
+                                int countItem = 0;
+                                var kleinInnen = ViewBag.KleinInnen[i];
+                                var resultInnen = (kleinInnen != null) ? kleinInnen.Intern : 0;
+                                var resultPreis = (kleinInnen != null) ? kleinInnen.costSizeIntern : 0;
+
+                                <div id="kleinGrose" class="kleinZise-@countKleinZise">
+                                    <div>
+                                        <div>
+                                            <h5>Innen</h5>
+                                            <input type="number" class="form-control" value="@resultInnen" name="innenKlein" />
+                                        </div>
+                                        <div>
+                                            <h5>Preis</h5>
+                                            <input type="number" class="form-control" step="0,00" value="@resultPreis" name="innenKleinPreis" />
+                                        </div>
+                                    </div>
+                                    <div class="arrow-right">
+                                    </div>
+                                    <div>
+                                        <table class="table">
+                                            <thead>
+                                                <tr>
+                                                    <th>Wert</th>
+                                                    <th>Preis</th>
+                                                    <th><button type="button" onclick="PlusKleinAussen('@countKleinZise')" class="btn btn-success">+</button><button type="button" class="btn danger" onclick="MinusKleinIntern('@countKleinZise')">-</button></th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="kleiIntern">
+
+                                                @foreach (var list in kleinInnen.Doppel_Aussen_klein)
+                                                {
+                                                    <tr>
+                                                        <th><input name="aussenDoppelKlein" id="interKlein" class="form-control" value="@list.aussen" type="number" step="0,01" /></th>
+                                                        <td><input name="aussen_priesDoppelKlein" class="form-control" type="number" value="@list.costSizeAussen" step="0,01" /></td>
+                                                    </tr>
+                                                    countItem++;
+                                                }
+                                            </tbody>
+                                        </table>
+                                        <input type="hidden" name="KleinZiseCountInter" value="@countItem" id="KleinZiseCountInter" />
+                                    </div>
+                                </div>
+
+                                countKleinZise++;
+
+                            }
+                        }
+
+                        <button type="button" onclick="newKlein()"  class="btn danger">Create New Aussen</button>
+                        <button type="button" onclick="newKleinIntern()" class="btn danger">Create New Innen</button>
                     </div>
+
+                   
                 
                 <div id="productOptions">
 
@@ -314,7 +369,7 @@
                                     </textarea>
                                 </div>
 
-                                <h1>Value & Cost </h1>
+                                <h1>Wert</h1>
                                 <div id="Aussen_Innen_ProfilDopel">
                                     <div id="valueNGF" class="form-group">
 
