--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Blogs/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Blogs/Index.cshtml
@@ -31,7 +31,7 @@
             string fullText = @item.Description; // Полный текст из модели
             string truncatedText = fullText.Length > 1000 ? fullText.Substring(0, 1000) + "..." : fullText;
 
-            <div class="blogItem shadow-lg mb-4 bg-body-tertiary rounded">
+            <div class="blogItem shadow-lg mb-4 bg-body-tertiary rounded pt-4">
              
                 <div id="productMenuInfo">
                     <div>
