--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
@@ -76,7 +76,7 @@
                 <div id="ExelItem" class="ExelItem shadow-lg  mb-5 bg-body-tertiary rounded">
 
                     <div id="productImage">
-                        <img decoding="async" data-bs-toggle="modal"  data-bs-target="#ModalAussenzylinder-@d" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/compression/"+@ViewBag.ImageSys)" asp-append-version="true" width="300px" height="300px" />
+                        <img decoding="async" data-bs-toggle="modal" data-bs-target="#ModalAussenzylinder-@d" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/compression/"+@ViewBag.ImageSys[0].ImageName)" asp-append-version="true" width="300px" height="300px" />
                     </div>
                     <div id="productMenuInfo">
                         <div id="ProductNameUndCost">
